fixed multiple click handler issue on answer buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ h1, h2 {
 	border-radius: 10px;
 	margin-bottom: 20px;
 	background: rgba(0, 0, 0, 0.5);
+	/* filter: blur(10px); */
 }
 
 /* to create a blur effect on the background */
@@ -54,3 +55,67 @@ h1, h2 {
 	z-index: -1;
 }
 
+#answerArea li {
+	list-style: none;
+	font-size: 24px;
+}
+
+/* Adding my own button style */
+.btn-kelly {
+  color: lawngreen;
+  background-color: #000;
+	border-color: lawngreen;
+	margin: 20px;
+}
+.btn-kelly:focus,
+.btn-kelly.focus {
+  color: lawngreen;
+  background-color: #449d44;
+  border-color: #255625;
+}
+.btn-kelly:hover {
+  color: lawngreen;
+  background-color: #449d44;
+  border-color: #398439;
+}
+.btn-kelly:active,
+.btn-kelly.active,
+.open > .dropdown-toggle.btn-kelly {
+  color: lawngreen;
+  background-color: #449d44;
+  border-color: #398439;
+}
+.btn-kelly:active:hover,
+.btn-kelly.active:hover,
+.open > .dropdown-toggle.btn-kelly:hover,
+.btn-kelly:active:focus,
+.btn-kelly.active:focus,
+.open > .dropdown-toggle.btn-kelly:focus,
+.btn-kelly:active.focus,
+.btn-kelly.active.focus,
+.open > .dropdown-toggle.btn-kelly.focus {
+  color: lawngreen;
+  background-color: #398439;
+  border-color: #255625;
+}
+.btn-kelly:active,
+.btn-kelly.active,
+.open > .dropdown-toggle.btn-kelly {
+  background-image: none;
+}
+.btn-kelly.disabled:hover,
+.btn-kelly[disabled]:hover,
+fieldset[disabled] .btn-kelly:hover,
+.btn-kelly.disabled:focus,
+.btn-kelly[disabled]:focus,
+fieldset[disabled] .btn-kelly:focus,
+.btn-kelly.disabled.focus,
+.btn-kelly[disabled].focus,
+fieldset[disabled] .btn-kelly.focus {
+  background-color: #000;
+  border-color: lawngreen;
+}
+.btn-kelly .badge {
+  color: #000;
+  background-color: lawngreen;
+}
